name:                et-cetera
version:             0.1.2.0
synopsis:            Invertible parsers for some *nix configuration files
-- description:
homepage:            github.com/paluh/et-cetera
license:             BSD3
license-file:        LICENSE
author:              Tomasz Rybarczyk
maintainer:          paluho@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.8 && <4.9
                      , boomerang
                      , errors
                      , hspec
                      , iproute
                      , lens
                      , mtl
                      , optional-args
                      , semigroups
                      , template-haskell
                      , unordered-containers
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  exposed-modules:      System.EtCetera.Interfaces
                      , System.EtCetera.Collectd
                      , System.EtCetera.Lxc
                      , System.EtCetera.Lxc.Internal

test-suite et-cetera-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8 && <4.9
                     , boomerang
                     , errors
                     , et-cetera
                     , hspec
                     , iproute
                     , lens
                     , mtl
                     , optional-args
                     , semigroups
                     , template-haskell
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
