name:                et-cetera
version:             0.1.1.0
synopsis:            Invertible parsers for some *nix configuration files
-- description:
homepage:            github.com/paluh/et-cetera
license:             BSD3
license-file:        LICENSE
author:              Tomasz Rybarczyk
maintainer:          paluho@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.8 && <4.9
                      , boomerang
                      , errors
                      , generic-deriving
                      , hspec
                      , iproute
                      , lens
                      , mtl
                      , optional-args
                      , semigroups
                      , template-haskell
                      , text
                      , unordered-containers
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  exposed-modules:      System.EtCetera.Interfaces
                      , System.EtCetera.Collectd
                      , System.EtCetera.Lxc
                      , System.EtCetera.Lxc.Internal
                      , System.EtCetera.Redis
                      , System.EtCetera.Redis.V2_8
                      , System.EtCetera.Internal
                      , System.EtCetera.Internal.Boomerangs
                      , System.EtCetera.Internal.Prim
                      , System.EtCetera.Internal.Utils

executable et-cetera-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , boomerang
                     , errors
                     , et-cetera
                      , generic-deriving
                     , hspec
                     , iproute
                     , lens
                     , mtl
                     , optional-args
                     , semigroups
                     , template-haskell
                     , text
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

test-suite et-cetera-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8.2 && <4.9
                     , boomerang
                     , errors
                     , et-cetera
                     , generic-deriving
                     , hspec
                     , iproute
                     , lens
                     , mtl
                     , optional-args
                     , semigroups
                     , template-haskell
                     , text
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
